--- a/web/data/make_dump.ipynb
+++ b/web/data/make_dump.ipynb
@@ -58,154 +58,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<bound method NDFrame.describe of       Unnamed: 0                       _id  INFO_WGT  \\\n",
-       "0              0  5f71aed765913a09815ff0e6       NaN   \n",
-       "1              1  5f71aed765913a09815ff0e7       NaN   \n",
-       "2              2  5f71aed765913a09815ff0e8       NaN   \n",
-       "3              3  5f71aed765913a09815ff0e9       NaN   \n",
-       "4              4  5f71aed765913a09815ff0ea       NaN   \n",
-       "...          ...                       ...       ...   \n",
-       "1232        1232  5f71aedd65913a09815ff5b8      87.0   \n",
-       "1233        1233  5f71aedd65913a09815ff5b9     240.0   \n",
-       "1234        1234  5f71aedd65913a09815ff5ba     333.0   \n",
-       "1235        1235  5f71aedd65913a09815ff5bb      97.0   \n",
-       "1236        1236  5f71aedd65913a09815ff5bc     100.0   \n",
-       "\n",
-       "                                               MANUAL01  \\\n",
-       "0                1. 고구마는 깨끗이 씻어서 껍질을 벗기고 4cm 정도로 잘라준다.a   \n",
-       "1       1. 깨끗이 씻어 손질한 애호박, 당근과 기둥을 뗀 표고버섯을 잘게 다지듯이 썬다.a   \n",
-       "2                    1. 배합초는 중불에서 설탕이 녹을 때까지 저어가면서 녹인다.   \n",
-       "3     1. 고사리는 상태에 따라 2~5시간 정도 불린 후 30분 정도 삶아 찬물에 헹구어...   \n",
-       "4                  1. 쌀은 30분 정도 불린 후 물을 1:1로 하여 밥을 짓는다.   \n",
-       "...                                                 ...   \n",
-       "1232                   1. 포두부, 양파, 피망, 파, 생강은 가늘게 채 썬다.   \n",
-       "1233                         1. 끓는 물에 한 입 크기로 썬 무를 넣는다.   \n",
-       "1234                        1. 밀가루에 소금을 섞어 반죽한 뒤 숙성시킨다.   \n",
-       "1235  1. 따뜻한 물에 부린 목이버섯, 동태살, 당근, 오이, 양파를 먹기 좋은 크기로 썬다.   \n",
-       "1236                           1. 낙지는 살짝 데치고 한입 크기로 썬다.   \n",
-       "\n",
-       "                                               MANUAL02  INFO_ENG  \\\n",
-       "0     2. 찜기에 고구마를 넣고 20~30분 정도 삶아 주고, 블렌더나 체를 이용하여 잘...    205.00   \n",
-       "1                             2. 누룽지는 1cm 정도로 잘게 부숴준다.b    380.00   \n",
-       "2     2. 뜨거운 밥에 배합초를 넣어서 밥알이 으깨지지 않게 고루 저어가면서 밥을 체온 ...    700.00   \n",
-       "3                        2. 콩나물은 다듬어서 끓는 물에 데친후 건져 식힌다.    225.00   \n",
-       "4              2. 숙주는 끓는 소금물에 넣어 숨이 죽으면 찬물에 헹구어 물기를 뺀다.    570.00   \n",
-       "...                                                 ...       ...   \n",
-       "1232                           2. 참느타리버섯, 게맛살은 가늘게 찢는다.    148.00   \n",
-       "1233                            2. 무가 투명해지면 배추를 넣고 끓인다.     23.07   \n",
-       "1234           2. 황태머리를 구운 뒤 찬물에 넣고 끓여 육수를 만들어 거즈에 거른다.    228.82   \n",
-       "1235    2. 동태살에 소금과 흰후추로 밑간을 하고 녹말과 계란 흰자를 섞어 튀김옷을 만든다.    116.56   \n",
-       "1236  2. 오이와 당근, 표고, 가지는 얇게 동그란 모양으로 썰고 가지와 표고를 살짝 구...     46.70   \n",
-       "\n",
-       "                                               MANUAL03  \\\n",
-       "0       3. 고구마와 물을 섞어 끓이면서 찹쌀가루로 농도를 맞추고 설탕을 넣어 맛을 낸다.c   \n",
-       "1          3. 냄비에 참기름을 두르고 썰어놓은 채소를 볶다가 누룽지와 물을 넣고 끓인다.   \n",
-       "2     3. 표고버섯은 기둥을 떼고 끓는 물에 데친 후 찬물에 헹궈 물기를 없애고 얇게 썰...   \n",
-       "3     3. 불린 표고버섯은 물기를 짜서 채를 썰고, 당근, 애호박은 길이 3cm 정도로 ...   \n",
-       "4     3. 고사리는 상태에 따라 2~5시간정도 불린 후 30분 정도 삶아 찬물에 헹구어 ...   \n",
-       "...                                                 ...   \n",
-       "1232                         3. 기름 두른 팬에 다진마늘, 생강을 볶는다.   \n",
-       "1233                                        3. 홍합을 넣는다.   \n",
-       "1234  3. 냄비에 2의 육수를 붓고 콩나물 1/2를 넣은 뒤 끓어 오르면 고추장과 고춧가...   \n",
-       "1235                           3. 동태살에 튀김옷을 입혀 기름에 튀긴다.   \n",
-       "1236  3. 설탕, 식초, 물로 초절이 양념을 만들어 오이, 당근, 구운 가지와 표고를 절인다.   \n",
-       "\n",
-       "                                               MANUAL04  \\\n",
-       "0     4. 잣을 팬에 노릇하게 볶아 다져서 고구마 죽에 섞는다. 기호에 따라 고구마를 튀...   \n",
-       "1                  4. 누룽지가 살짝 퍼지면 순두부를 넣고 흰후추와 소금을 넣는다.   \n",
-       "2             4. 새송이버섯은 세로로 얇게 썰어 달궈진 팬에 참기름을 두르고 볶는다.b   \n",
-       "3     4. 흰쌀, 현미쌀, 찹쌀을 깨끗하게 씻고, 30분 이상 불려 쌀에 1.2배의 물을...   \n",
-       "4     4. 말린 토란대는 미지근한 물에 하루정도 담갔다가 끓는 물에 넣어 끓이다가 물러지...   \n",
-       "...                                                 ...   \n",
-       "1232                     4. 포두부를 제외한 전처리 해둔 재료를 넣어 볶는다.   \n",
-       "1233                      4. 홍합이 입을 벌리면 마늘을 다져 넣어 조미한다.   \n",
-       "1234                 4. 숙성된 수제비 반죽을 밀어 따로 끓인 물에 삶아 건진다.   \n",
-       "1235             4. 물, 계란, 튀김가루를 섞어 튀김옷을 만든 뒤 단호박을 튀긴다.   \n",
-       "1236                    4. ③의 재료에 낙지를 올린 후 데친 미나리로 감싼다.   \n",
-       "\n",
-       "                                            MANUAL05  \\\n",
-       "0                                                NaN   \n",
-       "1     5. 죽이 끓으면 달걀을 풀어 넣고 한 소끔 끓여낸 후 참깨를 뿌려 마무리 한다.c   \n",
-       "2                5. 달걀노른자를 고루 풀어 약한 불에 지단을 부친 후 채썬다.   \n",
-       "3         5. 그릇에 밥과 준비된 재료를 넣어 소금으로 간을 하여 고루 버무려 준다.   \n",
-       "4                 5. 숙주, 토란대, 고사리는 따로 들기름에 살짝 볶아 준다.   \n",
-       "...                                              ...   \n",
-       "1232                     5. 야채가 익으면 노두유와 설탕을 넣어 볶는다.   \n",
-       "1233                                     5. 소금을 넣는다.   \n",
-       "1234                       5. 3에 4의 수제비를 넣고 한소끔 끓인다.   \n",
-       "1235             5. 프라이팬에 기름을 두르고 당근, 양파, 목이버섯을 볶는다.   \n",
-       "1236                             5. 사과를 잘게 다져서 준비한다.   \n",
-       "\n",
-       "                                         ATT_FILE_NO_MK  ... MANUAL_IMG11  \\\n",
-       "0     http://www.foodsafetykorea.go.kr/uploadimg/coo...  ...          NaN   \n",
-       "1     http://www.foodsafetykorea.go.kr/uploadimg/coo...  ...          NaN   \n",
-       "2     http://www.foodsafetykorea.go.kr/uploadimg/coo...  ...          NaN   \n",
-       "3     http://www.foodsafetykorea.go.kr/uploadimg/coo...  ...          NaN   \n",
-       "4     http://www.foodsafetykorea.go.kr/uploadimg/coo...  ...          NaN   \n",
-       "...                                                 ...  ...          ...   \n",
-       "1232  http://www.foodsafetykorea.go.kr/uploadimg/202...  ...          NaN   \n",
-       "1233  http://www.foodsafetykorea.go.kr/uploadimg/201...  ...          NaN   \n",
-       "1234  http://www.foodsafetykorea.go.kr/uploadimg/201...  ...          NaN   \n",
-       "1235  http://www.foodsafetykorea.go.kr/uploadimg/201...  ...          NaN   \n",
-       "1236  http://www.foodsafetykorea.go.kr/uploadimg/202...  ...          NaN   \n",
-       "\n",
-       "     MANUAL_IMG10 MANUAL20 MANUAL_IMG19 MANUAL_IMG17 MANUAL_IMG18  \\\n",
-       "0             NaN      NaN          NaN          NaN          NaN   \n",
-       "1             NaN      NaN          NaN          NaN          NaN   \n",
-       "2             NaN      NaN          NaN          NaN          NaN   \n",
-       "3             NaN      NaN          NaN          NaN          NaN   \n",
-       "4             NaN      NaN          NaN          NaN          NaN   \n",
-       "...           ...      ...          ...          ...          ...   \n",
-       "1232          NaN      NaN          NaN          NaN          NaN   \n",
-       "1233          NaN      NaN          NaN          NaN          NaN   \n",
-       "1234          NaN      NaN          NaN          NaN          NaN   \n",
-       "1235          NaN      NaN          NaN          NaN          NaN   \n",
-       "1236          NaN      NaN          NaN          NaN          NaN   \n",
-       "\n",
-       "                                       ATT_FILE_NO_MAIN MANUAL_IMG20  INFO_NA  \\\n",
-       "0     http://www.foodsafetykorea.go.kr/uploadimg/coo...          NaN    68.00   \n",
-       "1     http://www.foodsafetykorea.go.kr/uploadimg/coo...          NaN   271.00   \n",
-       "2     http://www.foodsafetykorea.go.kr/uploadimg/coo...          NaN    75.00   \n",
-       "3     http://www.foodsafetykorea.go.kr/uploadimg/coo...          NaN    97.00   \n",
-       "4     http://www.foodsafetykorea.go.kr/uploadimg/coo...          NaN   224.00   \n",
-       "...                                                 ...          ...      ...   \n",
-       "1232  http://www.foodsafetykorea.go.kr/uploadimg/202...          NaN    95.20   \n",
-       "1233  http://www.foodsafetykorea.go.kr/uploadimg/201...          NaN    60.48   \n",
-       "1234  http://www.foodsafetykorea.go.kr/uploadimg/201...          NaN   466.20   \n",
-       "1235  http://www.foodsafetykorea.go.kr/uploadimg/201...          NaN   140.65   \n",
-       "1236  http://www.foodsafetykorea.go.kr/uploadimg/202...          NaN    67.50   \n",
-       "\n",
-       "     INFO_FAT  \n",
-       "0        6.00  \n",
-       "1        7.00  \n",
-       "2        9.00  \n",
-       "3        7.00  \n",
-       "4       20.00  \n",
-       "...       ...  \n",
-       "1232     4.80  \n",
-       "1233     0.72  \n",
-       "1234     0.09  \n",
-       "1235     5.16  \n",
-       "1236     0.30  \n",
-       "\n",
-       "[1237 rows x 56 columns]>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 19
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "['갈비구이', '갈치구이', '고등어구이', '곱창구이', '닭갈비', '더덕구이', '떡갈비', '불고기', '삼겹살', '장어구이', '조개구이', '조기구이', '황태구이', '훈제오리', '계란국', '떡국_만두국', '무국', '미역국', '북엇국', '시래기국', '육개장', '콩나물국', '과메기', '양념치킨', '젓갈', '콩자반', '편육', '피자', '후라이드치킨', '갓김치', '깍두기', '나박김치', '무생채', '배추김치', '백김치', '부추김치', '열무김치', '오이소박이', '총각김치', '파김치', '가지볶음', '고사리나물', '미역줄기볶음', '숙주나물', '시금치나물', '애호박볶음', '경단', '꿀떡', '송편', '만두', '라면', '막국수', '물냉면', '비빔냉면', '수제비', '열무국수', '잔치국수', '짜장면', '짬뽕', '쫄면', '칼국수', '콩국수', '꽈리고추무침', '도라지무침', '도토리묵', '잡채', '콩나물무침', '홍어무침', '회무침', '김밥', '김치볶음밥', '누룽지', '비빔밥', '새우볶음밥', '알밥', '유부초밥', '잡곡밥', '주먹밥', '감자채볶음', '건새우볶음', '고추장진미채볶음', '두부김치', '떡볶이', '라볶이', '멸치볶음', '소세지볶음', '어묵볶음', '오징어채볶음', '제육볶음', '주꾸미볶음', '보쌈', '수정과', '식혜', '간장게장', '양념게장', '깻잎장아찌', '떡꼬치', '감자전', '계란말이', '계란후라이', '김치전', '동그랑땡', '생선전', '파전', '호박전', '곱창전골', '갈치조림', '감자조림', '고등어조림', '꽁치조림', '두부조림', '땅콩조림', '메추리알장조림', '연근조림', '우엉조림', '장조림', '코다리조림', '전복죽', '호박죽', '김치찌개', '닭계장', '동태찌개', '된장찌개', '순두부찌개', '갈비찜', '계란찜', '김치찜', '꼬막찜', '닭볶음탕', '수육', '순대', '족발', '찜닭', '해물찜', '갈비탕', '감자탕', '곰탕_설렁탕', '매운탕', '삼계탕', '추어탕', '고추튀김', '새우튀김', '오징어튀김', '약과', '약식', '한과', '멍게', '산낙지', '물회', '육회']\n"
+     ]
     }
    ],
    "source": [
-    "food_df.head()\n",
-    "# food_df['ATT_FILE_NO_MK'][0]\n",
-    "food_df.describe"
+    "# 1. 로컬에서 파일 목록 읽어오기.\n",
+    "import os\n",
+    "\n",
+    "path = 'C:/Users/user/Downloads/kfood'\n",
+    "file_lst = os.listdir(path)\n",
+    "food_dict = dict()\n",
+    "for lg_food in file_lst:\n",
+    "    sm_food = os.listdir(path+f'/{lg_food}/{lg_food}')\n",
+    "    for food in sm_food:\n",
+    "        food_dict[food] = 0\n",
+    "food_dict\n",
+    "len(food_dict)\n",
+    "food_lst = []\n",
+    "for food in food_dict.keys():\n",
+    "    # if '_' in \n",
+    "    food_lst.append(food)\n",
+    "print(food_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<OpenAPI_ServiceResponse>\n\t<cmmMsgHeader>\n\t\t<errMsg>SERVICE ERROR</errMsg>\n\t\t<returnAuthMsg>SERVICE_KEY_IS_NOT_REGISTERED_ERROR</returnAuthMsg>\n\t\t<returnReasonCode>30</returnReasonCode>\n\t</cmmMsgHeader>\n</OpenAPI_ServiceResponse>\nhttp://apis.data.go.kr/B551553/TradFoodInfoService/getFoodCateogryList?ServiceKey=cUrXjCod9NLhb2dpkxgVyG0Yc0KPGFKFDGyfN5StAQ2qJQVBDM7g0e64CxRoYXW5hYfKu5muWtCVSxeY0p3kCg%253D%253D&pageNo=1&numOfRows=10&type=JSON\n200\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import requests, json\n",
+    "from decouple import config\n",
+    "from urllib.parse import urlencode, quote_plus\n",
+    "\n",
+    "k = config('foodKey')\n",
+    "# k='cUrXjCod9NLhb2dpkxgVyG0Yc0KPGFKFDGyfN5StAQ2qJQVBDM7g0e64CxRoYXW5hYfKu5muWtCVSxeY0p3kCg%3D%3D'\n",
+    "url = 'https://tradifood.net/api/service/TradFoodInfoService/getFoodCateogryList'\n",
+    "url = 'http://apis.data.go.kr/B551553/TradFoodInfoService/getFoodCateogryList'\n",
+    "# url = 'http://apis.data.go.kr/B551553/TradFoodInfoService'\n",
+    "param = {\n",
+    "    'ServiceKey':k,\n",
+    "    'pageNo': 1,\n",
+    "    'numOfRows': 10,\n",
+    "    'type':'JSON',\n",
+    "}\n",
+    "# queryParams = '?' + urlencode({ quote_plus('ServiceKey') : k, quote_plus('pageNo') : '1', quote_plus('numOfRows') : '10', quote_plus('type') : 'JSON' })\n",
+    "# url = url+queryParams\n",
+    "# http = urllib3.poolmanager()\n",
+    "# res = http.request('GET', url)\n",
+    "res = requests.get(url, params=param, verify=False)\n",
+    "print(res.text)\n",
+    "# print(res.headers)\n",
+    "print(res.url)\n",
+    "print(res.status_code)"
    ]
   }
  ]
